--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        version_core = "1.10.1"
-        version_constraint_layout = "2.1.4"
-        version_gradle = '7.3.1'
-        version_kotlin = "1.8.0"
-        version_lifecycle = "2.6.1"
-        version_navigation = '2.5.3'
-        version_glide = "4.14.2"
-        version_moshi = "1.9.3"
-        version_retrofit = "2.9.0"
-        version_recyclerview = "1.3.0-rc01"
-        version_work = "2.8.1"
-        version_room = "2.5.1"
-        version_appcompat = "1.6.1"
-        version_moshi = "1.9.3"
-        version_glide = "4.14.2"
-        version_retrofit_loggin = "4.12.0"
-        version_timber = "5.0.1"
+        versionCore = "1.13.1"
+        versionConstraintLayout = "2.1.4"
+        versionKotlin = "1.8.0"
+        versionLifecycle = "2.8.6"
+        versionNavigation = '2.8.1'
+        versionRecyclerview = "1.3.2"
+        versionRecyclerViewSelection = '1.1.0'
+        versionWork = "2.9.1"
+        versionRoom = "2.6.1"
+        versionAppcompat = "1.7.0"
+        versionSafeArgs = '2.8.1'
+        versionGradleTools = '8.6.1'
+        versionRetrofit = "2.9.0"
+        versionRetrofitLoggin = "4.12.0"
+        versionMoshi = "1.9.3"
+        versionTimber = "5.0.1"
+        versionJunit = '4.13.2'
+        versionEspresso = '3.6.1'
+        versionJunitTest = '1.2.1'
 
     }
 
@@ -26,9 +28,9 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+        classpath "com.android.tools.build:gradle:$versionGradleTools"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versionKotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$versionSafeArgs"
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
 
 
