--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,11 +95,12 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$versionRetrofitLoggin"
 
     // Moshi
-    implementation "com.squareup.moshi:moshi:$versionMoshi"
     implementation "com.squareup.moshi:moshi-kotlin:$versionMoshi"
+    ksp "com.squareup.moshi:moshi-kotlin-codegen:$versionMoshi"
+
 
     // Picasso
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation "com.squareup.picasso:picasso:$versionPicasso"
 
     // Timber
     implementation "com.jakewharton.timber:timber:$versionTimber"
@@ -119,6 +120,7 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-workmanager:$versionKoin"
     // Navigation Graph
     implementation "io.insert-koin:koin-androidx-navigation:$versionKoin"
+
 
 
 }
