refactor: Use Paging 3 library to improve the performance of viewing the Asteroid List in the weekly filter, also Add Paging to the API response since it doesn't have a pagination feature
More detail:
https://developer.android.com/topic/libraries/architecture/paging/v3-overview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     ksp "androidx.room:room-compiler:$versionRoom"
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$versionRoom"
+    implementation "androidx.room:room-paging:$versionRoom"
+
+    // Paging 3
+    implementation 'androidx.paging:paging-runtime-ktx:3.3.2'
 
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:retrofit:$versionRetrofit"
