--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext {
-        versionCore = "1.13.1"
-        versionConstraintLayout = "2.1.4"
-        versionKotlin = "2.0.21"
-        versionLifecycle = "2.8.6"
-        versionNavigation = '2.8.3'
-        versionSafeArgs = '2.8.3'
-        versionRecyclerview = "1.3.2"
-        versionRecyclerViewSelection = '1.1.0'
-        versionWork = "2.9.1"
-        versionRoom = "2.6.1"
-        versionAppcompat = "1.7.0"
-        versionGradleTools = '8.6.1'
-        versionRetrofit = "2.9.0"
-        versionRetrofitLoggin = "4.12.0"
-        versionMoshi = "1.15.1"
-        versionTimber = "5.0.1"
-        versionJunit = '4.13.2'
-        versionEspresso = '3.6.1'
-        versionJunitTest = '1.2.1'
-        versionKoin = '3.4.0'
-        versionPicasso = '2.8'
 
-    }
+plugins {
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.kotlin) apply false
+    alias(libs.plugins.safe.args) apply false
+    alias(libs.plugins.gradle.plugin.secret) apply false
 
-    repositories {
-        mavenCentral()
-        google()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:$versionGradleTools"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versionKotlin"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$versionSafeArgs"
-        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
 }
