chore: Update the workflow file of the project
Ensure the workflow is triggered for push events and pull requests targeting the development branch.

--- a/.github/workflows/android-kotlin-ci.yml
+++ b/.github/workflows/android-kotlin-ci.yml
@@ -2,9 +2,13 @@ name: Kotlin Android CI Workflow
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - "master"
+      - "develop"
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - "master"
+      - "develop"
 
 jobs:
   build:
