--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,17 @@ dependencies {
     // Core with Ktx
     implementation libs.androidx.core.ktx
 
+    // Compose
+    implementation(platform(libs.androidx.compose.bom))
+    implementation(libs.androidx.activity.compose)
+    implementation(libs.androidx.material3)
+    implementation(libs.androidx.ui)
+    implementation(libs.androidx.ui.tooling)
+    implementation(libs.androidx.ui.tooling.preview)
+    implementation(libs.androidx.lifecycle.runtime.ktx)
+    implementation(libs.androidx.lifecycle.viewmodel.compose)
+    implementation(libs.androidx.navigation.compose)
+
     // ViewModel and LiveData
     implementation libs.androidx.lifecycle.viewmodel.ktx
 
