--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,12 @@ dependencies {
     // For control over item selection of both touch and mouse driven selection
     implementation libs.recyclerView.selection
 
+    // MultiDex
     implementation libs.multidex
+
+    // Coil
+    implementation(libs.coil.compose)
+    implementation(libs.coil.network.okhttp)
 
     // WorkManager
     implementation libs.andoidx.work
@@ -110,6 +115,7 @@ dependencies {
 
     // Paging 3
     implementation libs.paging.runtime
+    implementation(libs.androidx.paging.compose)
 
     // Retrofit with Moshi Converter
     implementation libs.retrofit
@@ -135,6 +141,8 @@ dependencies {
     // Koin
     implementation libs.koin.android
     implementation libs.koin.core
+    implementation libs.koin.androidx.compose
+
 
     implementation libs.koin.compat
     // Jetpack WorkManager
