feat: Migrate to Jetpack Compose and remove legacy UI components
- Replace `MainActivity`, `MainFragment`, and `DetailFragment` with Compose equivalents.
- Remove `activity_main.xml`, `fragment_main.xml`, `fragment_detail.xml`, and `item_asteroid.xml`.
- Introduce `MainComposeActivity`, `AsteroidApp`, and `AsteroidAppTopBar` for Compose UI.
- Add `dimenToSp` for dimension conversion in Compose.
- Update `AndroidManifest.xml` to use `MainComposeActivity` as the launcher.
- Remove all Base UI components (`AsteroidItemAdapter`, `BaseRecyclerViewAdapter`, `DataBindingViewHolder`).
- Add the new string "no_data" and  "text_back_button" in strings.
- Remove the not used menu.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".features.main.view.MainActivity"
+            android:name=".features.main.view.MainComposeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
