feat: Add Navigation 3 and Safe Args plugin
This commit introduces the Navigation 3 and Safe Args Gradle plugin.
from version: 2.9.4 > 2.9.5

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
     alias(libs.plugins.gradle.plugin.secret)
     alias(libs.plugins.ksp)
     alias(libs.plugins.kotlin.seralization)
+    alias(libs.plugins.navigation.safeargs)
 }
 
 android {
