--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ versionLifecycle = "2.9.4"
 workVersion = "2.10.4"
 roomVersion = "2.8.0"
 versionLifecycle = "2.10.0"
+workVersion = "2.11.1"
 pagingVersion = "3.3.6"
 retrofitLogginVersion = "5.1.0"
 retrofitVersion = "3.0.0"
