chore: Update Room version
This commit updates the Room version from `2.8.0` to `2.8.4` in the `gradle/libs.versions.toml` file.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ workVersion = "2.10.4"
 roomVersion = "2.8.0"
 versionLifecycle = "2.10.0"
 workVersion = "2.11.1"
+roomVersion = "2.8.4"
 pagingVersion = "3.3.6"
 retrofitLogginVersion = "5.1.0"
 retrofitVersion = "3.0.0"
