--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,18 +5,18 @@ coilNetworkOkhttpVersion = "3.3.0"
 composeBomVersion = "2026.01.01"
 composePluginVersion = "2.2.20"
 koinAndroidxComposeVersion = "4.1.1"
-kotlinVersion = '2.2.20'
+kotlinVersion = '2.3.0'
 koinVersion = '4.1.1'
 coreVersion = '1.17.0'
 navigationComposeVersion = "2.9.7"
 pagingComposeVersion = "3.3.6"
-gradleToolsVersion = "8.13.0"
+gradleToolsVersion = "9.0.0"
 multidexVersion = '2.0.1'
 timberVersion = '5.0.1'
 junitVersion = '4.13.2'
 espressoVersion = '3.7.0'
 junitTestVersion = '1.3.0'
-ksp = '2.2.20-2.0.2'
+ksp = "2.3.5"
 gradlePluginSecretVersion = '2.0.1'
 versionLifecycle = "2.10.0"
 workVersion = "2.11.1"
