feat: Add foundation-layout dependency
This commit adds the `androidx.compose.foundation:foundation-layout` dependency to the project.

The changes include:
- A new library entry, `androidx-compose-foundation-layout`, is added to the `gradle/libs.versions.toml` file.
- The `foundation-layout` dependency is included in the `app/build.gradle` file.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ retrofitVersion = "3.0.0"
 moshiVersion = "1.15.2"
 kotlinSerializationVersion = "1.10.0"
 
+
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
@@ -66,6 +67,7 @@ okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiVersion" }
 moshi-codegen = { group = "com.squareup.moshi", name = "moshi-kotlin-codegen", version.ref = "moshiVersion" }
 kotlin-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerializationVersion" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradleToolsVersion" }
