--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,19 +10,19 @@ plugins {
 
 android {
     namespace 'com.udacity.asteroidradar'
-    compileSdkVersion 36
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.udacity.asteroidradar"
-        minSdkVersion 24
-        targetSdkVersion 36
+        minSdk 24
+        targetSdk 36
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
-    lintOptions {
+    lint {
         disable("NotificationPermission")
     }
 
