--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,12 @@ plugins {
     alias(libs.plugins.kotlin.seralization)
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 android {
     namespace 'com.udacity.asteroidradar'
     compileSdk 36
@@ -34,10 +40,6 @@ android {
     }
     buildFeatures {
         buildConfig = true
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
     }
 
     secrets {
