refactor: Migrate build logic to Gradle Kotlin DSL
This commit migrates the project's build configuration from Groovy-based Gradle scripts (`.gradle`) to the Gradle Kotlin DSL (`.gradle.kts`). As part of this migration, the legacy Groovy build files have been deleted.

Key changes:
- All build logic from `build.gradle` and `app/build.gradle` has been moved to their respective `.gradle.kts` counterparts (not shown in diff).
- The root `settings.gradle` file has also been deleted and replaced by `settings.gradle.kts`.
- In `gradle/libs.versions.toml`, the Retrofit library alias has been updated to use the module notation (`com.squareup.retrofit2:retrofit`) for better consistency.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,7 +57,7 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
 room-paging = { group = "androidx.room", name = "room-paging", version.ref = "roomVersion" }
 paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "pagingVersion" }
-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 retrofit-converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofitVersion" }
 retrofit-converter-scalar = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "retrofitVersion" }
 okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "retrofitLogginVersion" }
